--- a/.htaccess
+++ b/.htaccess
@@ -14,3 +14,12 @@ RewriteRule . /ferdous-h/index.php [L]
 </IfModule>
 
 # END WordPress
+# BEGIN Simply Static
+# The directives (lines) between "BEGIN Simply Static" and "END Simply Static" are
+# dynamically generated, and should only be modified via WordPress filters.
+# Any changes to the directives between these markers will be overwritten.
+<Files "C:\xampp\htdocs\ferdous-h/wp-content/uploads\simply-static\4bdf9fba9215e1e7d62370b69f2697d9-debug.txt">
+require all denied
+require host localhost
+</Files>
+# END Simply Static
